[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[project]
name = "saturday_night_special"
version = "0.1.0"
description = "Discord bot that bans accounts for spamming."
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
]
